Added activities in pkg

--- a/app/src/main/res/layout/activity_create_address_data.xml
+++ b/app/src/main/res/layout/activity_create_address_data.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".CreateGeneralDataActivity">
+    tools:context=".activities.CreateGeneralDataActivity">
 
     <ScrollView
         android:layout_width="match_parent"
