--- a/app/src/main/res/layout/activity_create_contact.xml
+++ b/app/src/main/res/layout/activity_create_contact.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/bg"
 
     android:layout_height="match_parent"
-    tools:context=".CreateContactActivity">
+    tools:context=".activities.CreateContactActivity">
 
     <ScrollView
 
