--- a/app/src/main/res/layout/activity_address_detail.xml
+++ b/app/src/main/res/layout/activity_address_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".AddressDetailActivity">
+    tools:context=".activities.AddressDetailActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
