--- a/app/src/main/res/layout/activity_item_selected_detail.xml
+++ b/app/src/main/res/layout/activity_item_selected_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/bg"
     android:layout_height="match_parent"
-    tools:context=".ItemSelectedDetailActivity">
+    tools:context=".activities.ItemSelectedDetailActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
