--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/grey"
-    tools:context=".MyProfileActivity">
+    tools:context=".activities.MyProfileActivity">
 
     <RelativeLayout
         android:layout_width="wrap_content"
