--- a/app/src/main/res/layout/activity_order_data_form.xml
+++ b/app/src/main/res/layout/activity_order_data_form.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".OrderDataFormActivity">
+    tools:context=".activities.OrderDataFormActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
