--- a/app/src/main/res/layout/fragment_bank.xml
+++ b/app/src/main/res/layout/fragment_bank.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:text="Your Bank Accounts"
+            android:text="Bank Account List"
             android:textColor="@color/black"
             android:textSize="20sp" />
 
