--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -21,7 +21,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Your Contacts"
+            android:text="Contacts List"
             android:textColor="@color/black"
             android:textSize="20dp" />
 
