--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -21,7 +21,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Payment Accounts"
+            android:text="Payment Mode"
             android:textColor="@color/black"
             android:textSize="20dp" />
 
