--- a/app/src/main/res/layout/fragment_compliance_and_verification.xml
+++ b/app/src/main/res/layout/fragment_compliance_and_verification.xml
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginStart="20dp"
-                android:id="@+id/img"
+                android:id="@+id/imgCnicFront"
                 android:layout_marginEnd="5dp"
                 android:layout_weight="1"
                 app:cardCornerRadius="5dp"
@@ -68,6 +68,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/imgCnicBack"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginStart="5dp"
@@ -123,6 +124,7 @@
             app:layout_constraintTop_toBottomOf="@+id/upload_ntn_tv">
 
             <LinearLayout
+                android:id="@+id/selectPDF"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
@@ -140,7 +142,7 @@
                     android:src="@drawable/pdf_icon" />
 
                 <TextView
-                    android:layout_width="180dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="NTN document.pdf" />
