--- a/app/src/main/res/layout/activity_create_address_data.xml
+++ b/app/src/main/res/layout/activity_create_address_data.xml
@@ -167,6 +167,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
+                    android:id="@+id/location"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
