Added Prefs in general

--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -26,6 +26,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/titleAddress"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="Addresses"
