--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -642,7 +642,7 @@
                 android:layout_marginEnd="40dp"
                 android:visibility="gone"
                 tools:visibility="visible"
-                android:text="Create"
+                android:text="Next"
                 android:textAllCaps="false"
                 android:textSize="16sp"
                 android:textStyle="bold" />
