--- a/app/src/main/res/layout/activity_create_address_data.xml
+++ b/app/src/main/res/layout/activity_create_address_data.xml
@@ -532,7 +532,7 @@
                         android:id="@+id/edtWorkingHours"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:inputType="text"
+                        android:inputType="number"
                         android:maxLines="1"
                         android:textColor="@color/black"
                         android:textSize="14sp" />
