--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -26,12 +26,13 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/titleAddress"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Contact List"
+                    android:text="Contact"
                     android:gravity="center"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +57,7 @@
                     android:layout_height="1dp"
                     android:layout_gravity="center"
                     android:background="@color/TopviewGrey"
+                    android:layout_marginStart="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +66,18 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/btnNext"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="Next"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/blue"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:layout_marginStart="10dp"
+            android:textSize="18sp"/>
 
 
         <!--            <ImageView-->
@@ -77,7 +91,7 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/routeToCreateAddress"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
