--- a/app/src/main/res/layout/activity_create_contact.xml
+++ b/app/src/main/res/layout/activity_create_contact.xml
@@ -386,7 +386,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
                 android:layout_margin="40dp"
-                android:text="Next"
+                android:text="Create"
                 android:textAllCaps="false" />
 
         </LinearLayout>
