--- a/app/src/main/res/layout/fragment_bank.xml
+++ b/app/src/main/res/layout/fragment_bank.xml
@@ -17,19 +17,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1.7">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/titleAddress"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Bank Account List"
+                    android:text="Bank Accounts"
                     android:gravity="center"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +55,7 @@
                     android:layout_height="1dp"
                     android:layout_gravity="center"
                     android:background="@color/TopviewGrey"
+                    android:layout_marginStart="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +64,18 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/btnNext"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="Next"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/blue"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:layout_marginStart="10dp"
+            android:textSize="18sp"/>
 
 
         <!--            <ImageView-->
