--- a/app/src/main/res/layout/fragment_general_odf.xml
+++ b/app/src/main/res/layout/fragment_general_odf.xml
@@ -164,6 +164,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
+                android:id="@+id/currencyTypeList"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="15dp"
@@ -191,7 +192,6 @@
                     app:layout_goneMarginStart="10dp" />
 
                 <ImageView
-                    android:id="@+id/currencyTypeList"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
@@ -231,6 +231,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
+                android:id="@+id/dealForBranchTypeList"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="15dp"
@@ -258,7 +259,6 @@
                     app:layout_goneMarginStart="10dp" />
 
                 <ImageView
-                    android:id="@+id/dealForBranchTypeList"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
@@ -298,6 +298,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
+                android:id="@+id/orderStatusTypeList"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="15dp"
@@ -325,7 +326,6 @@
                     app:layout_goneMarginStart="10dp" />
 
                 <ImageView
-                    android:id="@+id/orderStatusTypeList"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
@@ -394,6 +394,7 @@
                 android:layout_marginEnd="40dp"
                 android:layout_marginBottom="15dp"
                 android:text="Create"
+                android:visibility="gone"
                 android:textAllCaps="false"
                 android:textSize="16sp"
                 android:textStyle="bold" />
